TGR-1150: TigerProxy WebUI: Correct escaping in inspect-dialog for RbelPath-generation added